--- a/Dateien/Titelseite.tex
+++ b/Dateien/Titelseite.tex
@@ -9,22 +9,22 @@
 
 \begin{document}
 	
-
+\pagestyle{empty}
 		\begin{center} 
-			\includegraphics[scale=0.4]{./Dateien/UniKoelnLogo.jpeg}
+			\includegraphics[scale=0.3]{./Dateien/UniKoelnLogo.jpeg}
 			\vspace*{2cm} 
 			
 			
 			\large 
 			Bachelorarbeit
-			\vspace*{2cm}
+			\vspace*{1cm}
 			
-			{\huge \textbf{Der Endlichkeitssatz für $H^1(X,\mathcal{O})$ auf kompakten Riemannschen Flächen}}
+			{\huge \textbf{Der Endlichkeitssatz für $H^1(X,\mathcal{O})$ auf \\[0.5cm]kompakten Riemannschen Flächen}}
 			\vspace*{1cm}
 			
 			\includegraphics[scale=0.2
 			]{./Dateien/Torus.png}
-			\vspace{2.5cm}
+			\vspace{1.5cm}
 			
 			Aurelio Marafioti
 			
@@ -32,12 +32,12 @@
 			\vspace*{1cm}
 			
 			\today
-			\vspace*{2cm}
+			\vspace*{1.5cm}
 			
-			
+			\small{
 			Betreuung: Prof. Dr. George Marinescu \\
 			Mathematisches Institut \\
-			Universität zu Köln
+			Universität zu Köln}
 		\end{center}
 
 \end{document}
